fix popover z-index

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -1553,6 +1553,10 @@ div.external-user-image {
     li [class^="icon-"], li [class*=" icon-"] { width: 2em; text-align: left; }
 }
 
+.popover {
+    z-index: 65002 !important;
+}
+
 /** MEDIA QUERIES AT THE VERY BOTTOM -- EITHER MISTRANSFORMED OR EATEN BY LESS.JS **/
 
 @media (max-width: 900px) {
